# PhoneticNumberSystem

./: .clang-format  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.me
CMake/: functions.cmake  (+2 more)
Sources/: CMakeLists.txt
Sources/Main/: CMakeLists.txt  CyfrowyAlfabetFonetyczny.qrc  PhoneticNumberSystem.xml  TODO.txt  letters.txt  log4cpp.properties  loggers.cpp  main.cpp
Sources/Main/Data/: CAppSettings.cpp  CAppSettings.h  CAppSettingsKeywords.h  CDataThread.cpp  CDataThread.h  CDictionaryData.cpp  CDictionaryData.h  CSubstituteSearch.cpp  CSubstituteSearch.h  CSubstituteSearchTypes.h  CSystemDigitsConfiguration.cpp  CSystemDigitsConfiguration.h  SearchResultTreeNode.cpp  SearchResultTreeNode.h
Sources/Main/GUI/: ComposeSubstituteSentenceWidget.cpp  ComposeSubstituteSentenceWidget.h  CustomComboBox_tools.h  MainWindow.cpp  MainWindow.h  MainWindow_p.cpp  MainWindow_p.h  SearchNumberLineEdit.cpp  SearchNumberLineEdit.h  SearchPhoneticRepresentationsDlg.cpp  SearchPhoneticRepresentationsDlg.h  SearchResultWordWidget.cpp  SearchResultWordWidget.h  SubstituteSearchResultComboBox.cpp  SubstituteSearchResultComboBox.h  SubstituteSearchResultComboDelegate.h
Sources/Main/GUI/Settings/: AppSettingsDlg.cpp  AppSettingsDlg.h  DictionariesConfigurationDlg.cpp  DictionariesConfigurationDlg.h  SubstituteValuesConfigurationDlg.cpp  SubstituteValuesConfigurationDlg.h
Sources/Main/UT/tests/: ut_matching_words_search.cpp  ut_matching_words_search.h
Sources/Main/mt/: CMakeLists.txt
Sources/Main/mt/tests/: data_thread.cpp  data_thread.h  substitute_search.cpp
Sources/Main/src/: CMakeLists.txt  TODO.txt  log4cpp.properties  loggers.cpp  main.cpp
Sources/Main/src/Data/: AppSettings.cpp  AppSettings.h  CAppSettings.cpp  CAppSettings.h  CAppSettingsKeywords.h  CDataThread.cpp  CDataThread.h  CDictionaryData.cpp  CDictionaryData.h  CSubstituteSearch.cpp  CSubstituteSearch.h  CSystemDigitsConfiguration.cpp  CSystemDigitsConfiguration.h  DataThread.cpp  DataThread.h  DictionaryData.cpp  DictionaryData.h  MatchingWordsSearch.cpp  MatchingWordsSearch.h  MatchingWordsSearchTypes.h  SearchResultTreeNode.cpp  SearchResultTreeNode.h  Settings.cpp  Settings.h  path_manager.cpp  path_manager.h
Sources/Main/src/GUI/: ComposeSubstituteSentenceWidget.cpp  CustomComboBox_tools.cpp  MainWindow.cpp  MainWindow.h  MainWindow_p.cpp  MainWindow_p.h  SearchNumberLineEdit.cpp  SearchPhoneticRepresentationsDlg.cpp  SearchResultWordWidget.cpp  SubstituteSearchResultComboBox.cpp  SubstituteSearchResultComboDelegate.h
Sources/Main/src/data/: CSystemDigitsConfiguration.cpp  DataThread.cpp  DataThread.h  DictionaryData.cpp  DictionaryData.h  MatchingWordsSearch.cpp  MatchingWordsSearch.h  MatchingWordsSearchTypes.h  Settings.cpp
Sources/Main/test/: CMakeLists.txt  TestRunner.h  main.cpp
Sources/Main/test/MT/: CMakeLists.txt
Sources/Main/test/TestCases/: .CAppSettingsTest.cpp.swp  CAppSettingsTest.cpp  CAppSettingsTest.h  CDataThreadTest.cpp  CDataThreadTest.h  CDictionaryDataTest.cpp  CSearchResultTreeTest.cpp  CSettingsTest.cpp  CSettingsTest.h  CSubstituteSearchTest.cpp  CSubstituteValuesConfigurationDlgTest.cpp  CSystemDigitsConfigurationTest.cpp  MatchingWordsSearchTest.cpp  MatchingWordsSearchTest.h  mt_substitute_search_test.cpp  mt_substitute_search_test.h  path_manager_test.cpp
Sources/Main/test/UT/: CMakeLists.txt  ut_matching_words_search.cpp
Sources/Main/ut/: CMakeLists.txt  main.cpp
Sources/Main/ut/tests/: base_dictionary_warehouse.cpp  combobox_matching_words_result_delegate.cpp  dictionary_data.cpp  dictionary_data.h  matching_words_search.cpp  settings_test.cpp  ut_base_dictionary_warehouse.cpp  ut_dictionary_data.cpp  ut_dictionary_data.h  ut_matching_words_search.cpp  ut_matching_words_search.h
Sources/Tools/: CMakeLists.txt  loggers.cpp  qtTools.cpp
Sources/UnitTest/: CAppSettingsTest.cpp  CAppSettingsTest.h  CMakeLists.txt  CSubstituteValuesConfigurationDlgTest.cpp  CSubstituteValuesConfigurationDlgTest.h  TestRunner.h  main.cpp
Sources/UnitTest/TestCases/: CAppSettingsTest.cpp  CAppSettingsTest.h  CDataThreadTest.cpp  CDataThreadTest.h  CDictionaryDataTest.cpp  CDictionaryDataTest.h  CSearchResultTreeTest.cpp  CSearchResultTreeTest.h  CSubstituteSearchTest.cpp  CSubstituteSearchTest.h  CSubstituteValuesConfigurationDlgTest.cpp  CSubstituteValuesConfigurationDlgTest.h  CSystemDigitsConfigurationTest.cpp  CSystemDigitsConfigurationTest.h  mt_substitute_search_test.cpp  mt_substitute_search_test.h
Sources/hunspell/: CMakeLists.txt
Sources/log4cplus/: CMakeLists.txt
Sources/log4cpp/: CMakeLists.txt
Sources/log4cpp/include/log4cpp/: Appender.hh
Sources/log4cpp/src/: Appender.cpp
Sources/log4qt/: CMakeLists.txt  ttcclayout.cpp
Sources/main/: CMakeLists.txt
Sources/main/mt/: CMakeLists.txt
Sources/main/src/: CMakeLists.txt  log4cplus.properties
Sources/tools/: CMakeLists.txt
sources/: CMakeLists.txt  Requirements.txt  TODO.txt  main.cpp
sources/data/: CSystemDigitsConfiguration.h  data_thread.cpp  data_thread.h  dictionary_data.h  matching_words_search.cpp  matching_words_search.h  settings.cpp  settings.h
sources/data/dictionaries/: base_dictionary_warehouse.cpp  dictionary_file_memory_map.cpp  dictionary_file_memory_map.h
sources/gui/: main_window.cpp  main_window.h  main_window_p.cpp
sources/gui/search_phonetic_representation/: combobox_matching_words_result_delegate.h  compose_substitute_sentence_widget.cpp  compose_substitute_sentence_widget.h  search_number_lineedit.cpp  search_phonetic_representations_dlg.cpp  substitute_search_result_combobox.cpp  substitute_search_result_combobox.h  word_result_widget.cpp
sources/gui/settings/: DictionariesConfigurationDlg.cpp  SettingsDlg.cpp  SubstituteValuesConfigurationDlg.cpp
sources/main/: CMakeLists.txt
sources/main/mt/: CMakeLists.txt  main.cpp
sources/main/src/: CMakeLists.txt  log4cplus.properties  main.cpp
sources/main/test/: CMakeLists.txt
sources/main/ut/: CMakeLists.txt
sources/tools/: CMakeLists.txt  loggers.cpp  qtTools.cpp
(+142 files in other folders)
