cmake_minimum_required(VERSION 2.8)
project(PhoneticNumberSystem_Sources)

add_subdirectory(tools)
add_subdirectory(Main)
add_subdirectory(UnitTest)
if (Logger STREQUAL "log4Qt")
  add_subdirectory(log4qt)
elseif (Logger STREQUAL "log4cpp")
  add_subdirectory(log4cpp)
endif (Logger STREQUAL "log4Qt")
